--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,9 +4,10 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704708692293" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704708692293"> <script type="module">import { ErrorPage } from '/error-DFJPYWWE.js';</script>
-	<link rel="stylesheet" href="/?cache=1704708692293">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704732944875" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704732944875"> <script type="module">import { ErrorPage } from '/error-ISWZAPHA.js';</script>
+	<link rel="stylesheet" href="/?cache=1704732944875">
 </head>
 
 <body>
