--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,13 +4,14 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704708692293" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704708692293"> <script type="module">import { IndexPage } from '/pages-CQL6HAZP.js';</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704732944875" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704732944875"> <script type="module">import { IndexPage } from '/pages-WNOFMSIL.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1704708692293">
+	<link rel="stylesheet" href="/index.html.css?cache=1704732944875">
 </head>
 
 <body>
