--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,10 +4,11 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704708692293" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704708692293"> <script type="module">import { YesSSGPage } from '/ssg-yes-IDZQPXOV.js';</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704732944875" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704732944875"> <script type="module">import { YesSSGPage } from '/ssg-yes-CEXIJGZY.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704708692293">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704732944875">
 </head>
 
 <body>
