Using decorators for events

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,13 +5,13 @@
 	<title>Home page</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704732944875" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704732944875"> <script type="module">import { IndexPage } from '/pages-WNOFMSIL.js';</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704915597477" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704915597477"> <script type="module">import { IndexPage } from '/pages-TJVYTPEY.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1704732944875">
+	<link rel="stylesheet" href="/index.html.css?cache=1704915597477">
 </head>
 
 <body>
@@ -36,13 +36,13 @@
 			<li>List ID indexList</li>
 			<li is="l-listitem" id="indexList-0" data-value="hello">
 				<p>List item ID indexList-0</p>
-				<div is="l-textbox" data-max="10" data-value="hello" id="indexList-0-text"> <input class="warning" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="indexList-0-text-remaining"> 5 / 10 Remaining </span>
+				<div is="l-textbox" data-max="10" data-value="hello" id="indexList-0-text"> <input class="warning" id="indexList-0-text-txt" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="indexList-0-text-remaining"> 5 / 10 Remaining </span>
 					<p>textbox ID indexList-0-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
 			<li is="l-listitem" id="indexList-1" data-value="world">
 				<p>List item ID indexList-1</p>
-				<div is="l-textbox" data-max="10" data-value="world" id="indexList-1-text"> <input class="warning" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="indexList-1-text-remaining"> 5 / 10 Remaining </span>
+				<div is="l-textbox" data-max="10" data-value="world" id="indexList-1-text"> <input class="warning" id="indexList-1-text-txt" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="indexList-1-text-remaining"> 5 / 10 Remaining </span>
 					<p>textbox ID indexList-1-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
