adding ids back in

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -5,13 +5,13 @@
 	<title>Error 404</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704732944875" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704732944875"> <script type="module">import { ErrorPage } from '/error-ISWZAPHA.js';</script>
-	<link rel="stylesheet" href="/?cache=1704732944875">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705310614958" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705310614958"> <script type="module">import { ErrorPage } from '/error-TROCAUPQ.js';</script>
+	<link rel="stylesheet" href="/?cache=1705310614958">
 </head>
 
 <body>
-	<main is="l-errorpage" data-page-title="Error 404">
+	<main id="UID2_" is="l-errorpage" data-page-title="Error 404">
 		<nav>
 			<ul>
 				<li><a href="/404.html">Go error404</a></li>
@@ -26,7 +26,7 @@
 			</ul>
 		</nav>
 		<h1>404 page :(</h1>
-		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive" id="modals"></div>
+		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
 </body>
 
