--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,17 +5,17 @@
 	<title>Home page</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1704922828296" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704922828296"> <script type="module">import { IndexPage } from '/pages-EJPQPYYI.js';</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705310614958" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705310614958"> <script type="module">import { IndexPage } from '/pages-Z7MP6Z73.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1704922828296">
+	<link rel="stylesheet" href="/index.html.css?cache=1705310614958">
 </head>
 
 <body>
-	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
+	<main id="UID5_" is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
 		<nav>
 			<ul>
 				<li><a href="/404.html">Go error404</a></li>
@@ -30,20 +30,20 @@
 			</ul>
 		</nav>
 		<h1>Hello world!</h1>
-		<div is="l-transitiontest"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
+		<div id="UID6_" is="l-transitiontest"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
-		<ol is="l-list" id="indexList">
-			<li>List ID indexList</li>
-			<li is="l-listitem" id="indexList-0" data-value="hello">
-				<p>List item ID indexList-0</p>
-				<div is="l-textbox" data-max="10" data-value="hello" id="indexList-0-text"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="indexList-0-text-remaining"> 5 / 10 Remaining </span>
-					<p>textbox ID indexList-0-text</p>
+		<ol id="UID7_" is="l-list">
+			<li>List ID UID7_</li>
+			<li id="UID3_" is="l-listitem" data-value="hello">
+				<p>List item ID UID3_</p>
+				<div id="UID3_-text" is="l-textbox" data-max="10" data-value="hello"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="UID3_-text-remaining"> 5 / 10 Remaining </span>
+					<p>textbox ID UID3_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
-			<li is="l-listitem" id="indexList-1" data-value="world">
-				<p>List item ID indexList-1</p>
-				<div is="l-textbox" data-max="10" data-value="world" id="indexList-1-text"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="indexList-1-text-remaining"> 5 / 10 Remaining </span>
-					<p>textbox ID indexList-1-text</p>
+			<li id="UID4_" is="l-listitem" data-value="world">
+				<p>List item ID UID4_</p>
+				<div id="UID4_-text" is="l-textbox" data-max="10" data-value="world"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="UID4_-text-remaining"> 5 / 10 Remaining </span>
+					<p>textbox ID UID4_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
 			<li> <button onclick="this.closest(`[is='l-list']`).onAdd(event)" type="button">Add</button> </li>
@@ -77,7 +77,7 @@
 			<li> ut aliquip ex</li>
 		</ol>
 		<div id="jump2">Jump 2</div>
-		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive" id="modals"></div>
+		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
 </body>
 
