--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,13 +5,13 @@
 	<title>Home page</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705310614958" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705310614958"> <script type="module">import { IndexPage } from '/pages-Z7MP6Z73.js';</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705339159429" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705339159429"> <script type="module">import { IndexPage } from '/pages-EPDRQ5XP.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1705310614958">
+	<link rel="stylesheet" href="/index.html.css?cache=1705339159429">
 </head>
 
 <body>
@@ -34,13 +34,13 @@
 		<div id="jump1">Jump 1</div>
 		<ol id="UID7_" is="l-list">
 			<li>List ID UID7_</li>
-			<li id="UID3_" is="l-listitem" data-value="hello">
+			<li id="UID3_" is="l-listitem" data-text="hello">
 				<p>List item ID UID3_</p>
 				<div id="UID3_-text" is="l-textbox" data-max="10" data-value="hello"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="UID3_-text-remaining"> 5 / 10 Remaining </span>
 					<p>textbox ID UID3_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
-			<li id="UID4_" is="l-listitem" data-value="world">
+			<li id="UID4_" is="l-listitem" data-text="world">
 				<p>List item ID UID4_</p>
 				<div id="UID4_-text" is="l-textbox" data-max="10" data-value="world"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="UID4_-text-remaining"> 5 / 10 Remaining </span>
 					<p>textbox ID UID4_-text</p>
