Seems to render properly, needs to hydrate

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -5,9 +5,9 @@
 	<title>Error 404</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705310614958" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705310614958"> <script type="module">import { ErrorPage } from '/error-TROCAUPQ.js';</script>
-	<link rel="stylesheet" href="/?cache=1705310614958">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705359227773" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705359227773"> <script type="module">import { ErrorPage } from '/error-KIPYEU6S.js';</script>
+	<link rel="stylesheet" href="/?cache=1705359227773">
 </head>
 
 <body>
