--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -5,14 +5,14 @@
 	<title>SSG yes</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705310614958" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705310614958"> <script type="module">import { YesSSGPage } from '/ssg-yes-2CEYWWIT.js';</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705359227773" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705359227773"> <script type="module">import { YesSSGPage } from '/ssg-yes-P55IJGMC.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705310614958">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705359227773">
 </head>
 
 <body>
-	<main id="UID13_" is="l-yesssgpage" data-page-title="SSG yes">
+	<main id="UID15_" is="l-yesssgpage" data-page-title="SSG yes">
 		<nav>
 			<ul>
 				<li><a href="/404.html">Go error404</a></li>
