--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,13 +5,13 @@
 	<title>Home page</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705360857023" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705360857023"> <script type="module">import { IndexPage } from '/pages-IXTOP42K.js';</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705375929365" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705375929365"> <script type="module">import { IndexPage } from '/pages-AAMEQYO3.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1705360857023">
+	<link rel="stylesheet" href="/index.html.css?cache=1705375929365">
 </head>
 
 <body>
@@ -48,6 +48,7 @@
 			</li>
 			<li> <button onclick="this.closest(`[is='l-list']`).onAdd(event)" type="button">Add</button> </li>
 		</ol>
+		<h1>This should be in the source, not browser.</h1>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
