--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -2,32 +2,31 @@
 <html lang="en">
 
 <head>
-	<title>Error 404</title>
-	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705360857023" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705360857023"> <script type="module">import { ErrorPage } from '/error-RJWR2FUS.js';</script>
-	<link rel="stylesheet" href="/?cache=1705360857023">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Error 404</title>
+	<base href="/"> <script src="/browser.js?cache=1705421219637" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705421219637"> <script type="module">import { ErrorPage } from '/error-5OFEKD5J.js';</script>
 </head>
 
-<body>
+<body is="l-app">
+	<nav>
+		<ul>
+			<li><a href="/404.html">Go error404</a></li>
+			<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+			<li><a href="/">Go home</a></li>
+			<li><a href="/#jump1">Go homeJump1</a></li>
+			<li><a href="/#jump2">Go homeJump2</a></li>
+			<li><a href="/ssg/no/">Go ssgNo</a></li>
+			<li><a href="/ssg/yes/">Go ssgYes</a></li>
+			<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+		</ul>
+	</nav>
 	<main is="l-errorpage" data-page-title="Error 404">
-		<nav>
-			<ul>
-				<li><a href="/404.html">Go error404</a></li>
-				<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li><a href="/">Go home</a></li>
-				<li><a href="/#jump1">Go homeJump1</a></li>
-				<li><a href="/#jump2">Go homeJump2</a></li>
-				<li><a href="/ssg/no/">Go ssgNo</a></li>
-				<li><a href="/ssg/yes/">Go ssgYes</a></li>
-				<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
-			</ul>
-		</nav>
 		<h1>404 page :(</h1>
-		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
+	<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 </body>
 
 </html>
