--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -2,35 +2,35 @@
 <html lang="en">
 
 <head>
-	<title>SSG yes</title>
-	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="/script.js?cache=1705360857023" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705360857023"> <script type="module">import { YesSSGPage } from '/ssg-yes-5NIBRT3T.js';</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>SSG yes</title>
+	<base href="/"> <script src="/browser.js?cache=1705421219745" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705421219745">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705421219745"> <script type="module">import { YesSSGPage } from '/ssg-yes-35IGMXMM.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705360857023">
 </head>
 
-<body>
+<body is="l-app">
+	<nav>
+		<ul>
+			<li><a href="/404.html">Go error404</a></li>
+			<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+			<li><a href="/">Go home</a></li>
+			<li><a href="/#jump1">Go homeJump1</a></li>
+			<li><a href="/#jump2">Go homeJump2</a></li>
+			<li><a href="/ssg/no/">Go ssgNo</a></li>
+			<li><a href="/ssg/yes/">Go ssgYes</a></li>
+			<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+		</ul>
+	</nav>
 	<main is="l-yesssgpage" data-page-title="SSG yes">
-		<nav>
-			<ul>
-				<li><a href="/404.html">Go error404</a></li>
-				<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li><a href="/">Go home</a></li>
-				<li><a href="/#jump1">Go homeJump1</a></li>
-				<li><a href="/#jump2">Go homeJump2</a></li>
-				<li><a href="/ssg/no/">Go ssgNo</a></li>
-				<li><a href="/ssg/yes/">Go ssgYes</a></li>
-				<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
-			</ul>
-		</nav>
 		<h1>SSG yes</h1>
 		<div id="jump1">Jump 1</div>
 		<div id="jump2">Jump 2</div>
-		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
+	<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 </body>
 
 </html>
