--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1705421219692" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705421219692">
-	<link rel="stylesheet" href="/index.html.css?cache=1705421219692"> <script type="module">import { IndexPage } from '/pages-I6FAYUF5.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705421806243" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705421806243">
+	<link rel="stylesheet" href="/index.html.css?cache=1705421806243"> <script type="module">import { IndexPage } from '/pages-AQDQWYVF.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
@@ -36,13 +36,13 @@
 			<li>List ID </li>
 			<li id="UID1_" is="l-listitem" data-text="hello">
 				<p>List item ID UID1_</p>
-				<div id="UID1_-text" is="l-textbox" data-max="10" data-value="hello"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="UID1_-text-remaining" aria-live="polite"> 5 / 10 Remaining </span>
+				<div id="UID1_-text" is="l-textbox" data-max="10" data-value="hello"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"><span id="UID1_-text-remaining" aria-live="polite"> 5 / 10 Remaining</span>
 					<p>textbox ID UID1_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
 			<li id="UID2_" is="l-listitem" data-text="world">
 				<p>List item ID UID2_</p>
-				<div id="UID2_-text" is="l-textbox" data-max="10" data-value="world"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="UID2_-text-remaining" aria-live="polite"> 5 / 10 Remaining </span>
+				<div id="UID2_-text" is="l-textbox" data-max="10" data-value="world"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"><span id="UID2_-text-remaining" aria-live="polite"> 5 / 10 Remaining</span>
 					<p>textbox ID UID2_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
