Renders but backwards

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
-	<base href="/"> <script src="/browser.js?cache=1705421219637" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705421219637"> <script type="module">import { ErrorPage } from '/error-5OFEKD5J.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705434172876" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705434172876"> <script type="module">import { ErrorPage } from '/error-B3VUBOXX.js';</script>
 </head>
 
 <body is="l-app">
@@ -23,7 +23,7 @@
 			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
-	<main is="l-errorpage" data-page-title="Error 404">
+	<main data-page-title="Error 404" id="app-page" is="l-errorpage">
 		<h1>404 page :(</h1>
 	</main>
 	<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
