--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1705431687034" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705431687034">
-	<link rel="stylesheet" href="/index.html.css?cache=1705431687034"> <script type="module">import { IndexPage } from '/pages-7XXKTQP2.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705434172928" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705434172928">
+	<link rel="stylesheet" href="/index.html.css?cache=1705434172928"> <script type="module">import { IndexPage } from '/pages-UNBNG7GU.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
@@ -28,7 +28,7 @@
 			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
-	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
+	<main id="app-page" data-message="This is a variable" is="l-indexpage" data-page-title="Home page">
 		<h1>Hello world!</h1>
 		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
