more trial and error

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1705434172928" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705434172928">
-	<link rel="stylesheet" href="/index.html.css?cache=1705434172928"> <script type="module">import { IndexPage } from '/pages-UNBNG7GU.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705442719066" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705442719066">
+	<link rel="stylesheet" href="/index.html.css?cache=1705442719066"> <script type="module">import { IndexPage } from '/pages-5IUAZXJW.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
@@ -28,19 +28,19 @@
 			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
-	<main id="app-page" data-message="This is a variable" is="l-indexpage" data-page-title="Home page">
+	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
 		<h1>Hello world!</h1>
 		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
 		<ol is="l-list">
 			<li>List ID </li>
-			<li is="l-listitem" id="UID1_" data-text="hello">
+			<li id="UID1_" is="l-listitem" data-text="hello">
 				<p>List item ID UID1_</p>
 				<div id="UID1_-text" is="l-textbox" data-max="10" data-value="hello"><input data-render="static" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"><span id="UID1_-text-remaining" data-render="inner"> 5 / 10 Remaining</span>
 					<p>textbox ID UID1_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
-			<li is="l-listitem" id="UID2_" data-text="world">
+			<li id="UID2_" is="l-listitem" data-text="world">
 				<p>List item ID UID2_</p>
 				<div id="UID2_-text" is="l-textbox" data-max="10" data-value="world"><input data-render="static" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"><span id="UID2_-text-remaining" data-render="inner"> 5 / 10 Remaining</span>
 					<p>textbox ID UID2_-text</p>
