--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
-	<base href="/"> <script src="/browser.js?cache=1705434172972" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705434172972">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705434172972"> <script type="module">import { YesSSGPage } from '/ssg-yes-OQAGH4IY.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705442719083" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705442719083">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705442719083"> <script type="module">import { YesSSGPage } from '/ssg-yes-H5X3DKD3.js';</script>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
@@ -25,7 +25,7 @@
 			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
-	<main id="app-page" is="l-yesssgpage" data-page-title="SSG yes">
+	<main is="l-yesssgpage" data-page-title="SSG yes">
 		<h1>SSG yes</h1>
 		<div id="jump1">Jump 1</div>
 		<div id="jump2">Jump 2</div>
