Add meta description

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
+	<meta name="description" content="Error 404">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
-	<base href="/"> <script src="/browser.js?cache=1705442719024" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705442719024"> <script type="module">import { ErrorPage } from '/error-2A2ISPBV.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705644659301" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705644659301"> <script type="module">import { ErrorPage } from '/error-KZCW6KVS.js';</script>
 </head>
 
 <body is="l-app">
