--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+	<meta name="description" content="Home page">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1705459562986" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705459562986">
-	<link rel="stylesheet" href="/index.html.css?cache=1705459562986"> <script type="module">import { IndexPage } from '/pages-N4SGR4HZ.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705644659349" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705644659349">
+	<link rel="stylesheet" href="/index.html.css?cache=1705644659349"> <script type="module">import { IndexPage } from '/pages-SF5GZNPU.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
