--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+	<meta name="description" content="SSG yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
-	<base href="/"> <script src="/browser.js?cache=1705442719083" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705442719083">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705442719083"> <script type="module">import { YesSSGPage } from '/ssg-yes-H5X3DKD3.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705644659367" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705644659367">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705644659367"> <script type="module">import { YesSSGPage } from '/ssg-yes-R3UMGO2Z.js';</script>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
