--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -6,22 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
-	<base href="/"> <script src="/browser.js?cache=1705644659301" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705644659301"> <script type="module">import { ErrorPage } from '/error-KZCW6KVS.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705843976224" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705843976224"> <script type="module">import { ErrorPage } from '/error-FC3Q7FMQ.js';</script>
 </head>
 
 <body is="l-app">
 	<nav>
 		<ul>
-			<li><a href="/404.html">Go error404</a></li>
-			<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-			<li><a href="/">Go home</a></li>
-			<li><a href="/#jump1">Go homeJump1</a></li>
-			<li><a href="/#jump2">Go homeJump2</a></li>
-			<li><a href="/ssg/no/">Go ssgNo</a></li>
-			<li><a href="/ssg/yes/">Go ssgYes</a></li>
-			<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+			<li id="nav-error404"> Active: <a href="/404.html">Go error404</a> </li>
+			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
+			<li id="nav-home"> <a href="/">Go home</a> </li>
+			<li id="nav-homeJump1"> <a href="/#jump1">Go homeJump1</a> </li>
+			<li id="nav-homeJump2"> <a href="/#jump2">Go homeJump2</a> </li>
+			<li id="nav-ssgNo"> <a href="/ssg/no/">Go ssgNo</a> </li>
+			<li id="nav-ssgYes"> <a href="/ssg/yes/">Go ssgYes</a> </li>
+			<li id="nav-ssgYesJump1"> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
+			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
 	<main is="l-errorpage" data-page-title="Error 404">
