--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1705644659349" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705644659349">
-	<link rel="stylesheet" href="/index.html.css?cache=1705644659349"> <script type="module">import { IndexPage } from '/pages-SF5GZNPU.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1705843976268" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1705843976268">
+	<link rel="stylesheet" href="/index.html.css?cache=1705843976268"> <script type="module">import { IndexPage } from '/pages-BDAVE56V.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
@@ -18,15 +18,15 @@
 <body is="l-app">
 	<nav>
 		<ul>
-			<li><a href="/404.html">Go error404</a></li>
-			<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-			<li><a href="/">Go home</a></li>
-			<li><a href="/#jump1">Go homeJump1</a></li>
-			<li><a href="/#jump2">Go homeJump2</a></li>
-			<li><a href="/ssg/no/">Go ssgNo</a></li>
-			<li><a href="/ssg/yes/">Go ssgYes</a></li>
-			<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-			<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
+			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
+			<li id="nav-home"> Active: <a href="/">Go home</a> </li>
+			<li id="nav-homeJump1"> <a href="/#jump1">Go homeJump1</a> </li>
+			<li id="nav-homeJump2"> <a href="/#jump2">Go homeJump2</a> </li>
+			<li id="nav-ssgNo"> <a href="/ssg/no/">Go ssgNo</a> </li>
+			<li id="nav-ssgYes"> <a href="/ssg/yes/">Go ssgYes</a> </li>
+			<li id="nav-ssgYesJump1"> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
+			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
 	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
