--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1705843976268" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705843976268">
-	<link rel="stylesheet" href="/index.html.css?cache=1705843976268"> <script type="module">import { IndexPage } from '/pages-BDAVE56V.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1706302622560" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1706302622560">
+	<link rel="stylesheet" href="/index.html.css?cache=1706302622560"> <script type="module">import { IndexPage } from '/pages-WTQOVGYM.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
@@ -37,13 +37,13 @@
 			<li>List ID </li>
 			<li id="UID1_" is="l-listitem" data-text="hello">
 				<p>List item ID UID1_</p>
-				<div id="UID1_-text" is="l-textbox" data-max="10" data-value="hello"><input data-render="static" aria-live="polite" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"><span data-render="inner" aria-live="polite" id="UID1_-text-remaining"> 5 / 10 Remaining</span>
+				<div id="UID1_-text" is="l-textbox" data-max="10" data-value="hello"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"><span id="UID1_-text-remaining"> 5 / 10 Remaining</span>
 					<p>textbox ID UID1_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
 			<li id="UID2_" is="l-listitem" data-text="world">
 				<p>List item ID UID2_</p>
-				<div id="UID2_-text" is="l-textbox" data-max="10" data-value="world"><input data-render="static" aria-live="polite" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"><span data-render="inner" aria-live="polite" id="UID2_-text-remaining"> 5 / 10 Remaining</span>
+				<div id="UID2_-text" is="l-textbox" data-max="10" data-value="world"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"><span id="UID2_-text-remaining"> 5 / 10 Remaining</span>
 					<p>textbox ID UID2_-text</p>
 				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
