--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
-	<base href="/"> <script src="/browser.js?cache=1705843976285" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1705843976285">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1705843976285"> <script type="module">import { YesSSGPage } from '/ssg-yes-MZGDB5OA.js';</script>
+	<base href="/"> <script src="/browser.js?cache=1706302622580" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1706302622580">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1706302622580"> <script type="module">import { YesSSGPage } from '/ssg-yes-DRCB2WBY.js';</script>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
