change load order

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
-	<base href="/"> <script src="/browser.js?cache=1706302622513" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1706302622513"> <script type="module">import { ErrorPage } from '/error-P6SXFY56.js';</script>
+	<base href="/">
+	<link rel="stylesheet" href="/styles.css?cache=1706831887503"> <script src="/browser.js?cache=1706831887503" type="module"></script> <script type="module">import { ErrorPage } from '/error-WS744DAS.js';</script>
 </head>
 
 <body is="l-app">
