--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
-	<base href="/"> <script src="/browser.js?cache=1706302622560" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1706302622560">
-	<link rel="stylesheet" href="/index.html.css?cache=1706302622560"> <script type="module">import { IndexPage } from '/pages-WTQOVGYM.js';</script>
+	<base href="/">
+	<link rel="stylesheet" href="/styles.css?cache=1706831887568">
+	<link rel="stylesheet" href="/index.html.css?cache=1706831887568"> <script src="/browser.js?cache=1706831887568" type="module"></script> <script type="module">import { IndexPage } from '/pages-OUE7B5RX.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
