Fix issue with app-level component styles not persisting

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1706831887568">
-	<link rel="stylesheet" href="/index.html.css?cache=1706831887568"> <script src="/browser.js?cache=1706831887568" type="module"></script> <script type="module">import { IndexPage } from '/pages-OUE7B5RX.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1706886990056">
+	<link rel="stylesheet" href="/index.html.css?cache=1706886990056"> <script src="/browser.js?cache=1706886990056" type="module"></script> <script type="module">import { IndexPage } from '/pages-E25FSR5V.js';</script>
+	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
@@ -16,7 +17,7 @@
 </head>
 
 <body is="l-app">
-	<nav>
+	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
