--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,11 +7,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1706831887503"> <script src="/browser.js?cache=1706831887503" type="module"></script> <script type="module">import { ErrorPage } from '/error-WS744DAS.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1706886990022">
+	<link rel="stylesheet" href="/404.html.css?cache=1706886990022"> <script src="/browser.js?cache=1706886990022" type="module"></script> <script type="module">import { ErrorPage } from '/error-ERIPGT57.js';</script>
+	<style data-style="l-nav"></style>
 </head>
 
 <body is="l-app">
-	<nav>
+	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> Active: <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
