--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,13 +7,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1706831887588">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1706831887588"> <script src="/browser.js?cache=1706831887588" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-AKMLAMX6.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1706886990077">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1706886990077"> <script src="/browser.js?cache=1706886990077" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-LD33NKQM.js';</script>
+	<style data-style="l-nav"></style>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
 <body is="l-app">
-	<nav>
+	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
