support font-faces in theme

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1706886990056">
-	<link rel="stylesheet" href="/index.html.css?cache=1706886990056"> <script src="/browser.js?cache=1706886990056" type="module"></script> <script type="module">import { IndexPage } from '/pages-E25FSR5V.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1707345317046">
+	<link rel="stylesheet" href="/index.html.css?cache=1707345317046"> <script src="/browser.js?cache=1707345317046" type="module"></script> <script type="module">import { IndexPage } from '/pages-IMNYFLIQ.js';</script>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
@@ -55,7 +55,8 @@
 		<h2>This is a variable</h2>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><a href="/ssg/yes/">Link to SSG Yes</a></p><button onclick="this.closest(`[is='l-indexpage']`).anchorlessRoute(event)" type="button">Go to SSG Yes</button>
+		<p><a href="/ssg/yes/">Link to SSG Yes</a></p>
+		<p class="type-wtf">abc123</p><button onclick="this.closest(`[is='l-indexpage']`).anchorlessRoute(event)" type="button">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
